--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,6 @@
-include AUTHORS.md
-include CHANGELOG.md
-include CONTRIBUTING.md
+include *.rst
 include LICENSE
-include README.md
 
-recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
-recursive-include docs *.rst conf.py Makefile make.bat
