--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@
 
 language: python
 
-python:
-  - 2.7
-  - pypy
+env:
+    - TOXENV=py27
+    - TOXENV=pypy
 
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
