--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-demands==1.0.6
-funcsigs==0.4
-lxml==3.4.4
-mock==1.3.0
+demands>=1.1.0
+lxml>=3.4.4
+mock>=1.2.0
+property-caching>=1.0.3
+querylist>=0.2.0
+# required by mock 1.2.0
+funcsigs>=0.4
