Add Python 3 support
pypy3 doesn't work with lxml yet:
https://bugs.launchpad.net/lxml/+bug/1377501

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = py27, pypy, style
+envlist = py27, py33, py34, pypy, style
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/teamsupport
 commands =
-    python setup.py develop
     python setup.py test
 deps =
     -r{toxinidir}/requirements.txt
