--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 demands>=1.1.0
 lxml>=3.4.4
-mock>=1.2.0
+mock==1.1.0
+nose < 2.0.0
+pinocchio < 1.0.0
 property-caching>=1.0.3
 querylist>=0.2.0
 six==1.9.0
-# required by mock 1.2.0
-funcsigs>=0.4
