--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 demands>=1.1.0
 lxml>=3.4.4
-mock==1.1.0
+mock>=1.2.0
+# required by mock 1.2.0
+funcsigs>=0.4
 nose < 2.0.0
 pinocchio < 1.0.0
 property-caching>=1.0.3
